--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "a6digital/laravel-default-profile-image": "^2.0",
         "darryldecode/cart": "^4.2",
+        "davmixcool/laravel-meta-manager": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
